# active-drag-system

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  KY_Launch_03_22.csv  KY_Launch_PM_03_22.csv  LICENSE  README.md  Vagrantfile  ads.service  ads_config.service  bbb_setup.sh  build.sh  compose-dev.yaml  notes.txt  test_launch.c  test_launch.sh
.vagrant/bundler/: global.sol
docs/: TestLaunch2-Critial.txt
hardware/: active-drag-system-minimal.kicad_pcb  active-drag-system-minimal.kicad_prl  active-drag-system-minimal.kicad_pro  active-drag-system-minimal.kicad_sch  active-drag-system.kicad_pcb  active-drag-system.kicad_prl  active-drag-system.kicad_pro  active-drag-system.kicad_sch  fp-lib-table  mcu_rp2040-minimal.kicad_sch  mcu_rp2040.kicad_sch  motor_driver.kicad_sch  power_regulation-minimal.kicad_sch  power_regulation.kicad_sch  sensors-minimal.kicad_sch  sensors.kicad_sch  sym-lib-table  ~active-drag-system-minimal.kicad_pcb.lck
hardware/gerbers/: active-drag-system-B_Adhesive.gbr  active-drag-system-B_Courtyard.gbr  active-drag-system-B_Cu.gbr  active-drag-system-B_Fab.gbr  active-drag-system-B_Mask.gbr  active-drag-system-B_Paste.gbr  active-drag-system-B_Silkscreen.gbr  active-drag-system-Edge_Cuts.gbr  active-drag-system-F_Adhesive.gbr  active-drag-system-F_Courtyard.gbr  active-drag-system-F_Cu.gbr  active-drag-system-F_Fab.gbr  active-drag-system-F_Mask.gbr  active-drag-system-F_Paste.gbr  active-drag-system-F_Silkscreen.gbr  active-drag-system-In1_Cu.gbr  active-drag-system-In2_Cu.gbr  active-drag-system-Margin.gbr  active-drag-system-NPTH.drl  active-drag-system-PTH.drl  active-drag-system-User_Comments.gbr  active-drag-system-User_Drawings.gbr  active-drag-system-User_Eco1.gbr  active-drag-system-User_Eco2.gbr  active-drag-system-job.gbrjob
hardware/minimal-gerbers/: active-drag-system-minimal-B_Adhesive.gbr  active-drag-system-minimal-B_Courtyard.gbr  active-drag-system-minimal-B_Cu.gbr  active-drag-system-minimal-B_Fab.gbr  active-drag-system-minimal-B_Mask.gbr  active-drag-system-minimal-B_Paste.gbr  active-drag-system-minimal-B_Silkscreen.gbr  active-drag-system-minimal-Edge_Cuts.gbr  active-drag-system-minimal-F_Adhesive.gbr  active-drag-system-minimal-F_Courtyard.gbr  active-drag-system-minimal-F_Cu.gbr  active-drag-system-minimal-F_Fab.gbr  active-drag-system-minimal-F_Mask.gbr  active-drag-system-minimal-F_Paste.gbr  active-drag-system-minimal-F_Silkscreen.gbr  active-drag-system-minimal-In1_Cu.gbr  active-drag-system-minimal-In2_Cu.gbr  active-drag-system-minimal-Margin.gbr  active-drag-system-minimal-NPTH.drl  active-drag-system-minimal-PTH.drl  active-drag-system-minimal-User_Comments.gbr  active-drag-system-minimal-User_Drawings.gbr  active-drag-system-minimal-User_Eco1.gbr  active-drag-system-minimal-User_Eco2.gbr  active-drag-system-minimal-job.gbrjob
hardware/models/: ABM8AIG-12.000MHZ-12-2Z-T3.step  IIM-42653.step  LGA14L_LSM6_STM.step  LGA_CC-14-1_ADI.step  MMC5983MA_MEM.step  PTS815SJG250SMTRLFS.stp  RJN0012A.stp  SDO_CFP5_SOD128_NEX.step  SOIC_128JVSIQ_WIN.step  SON_DFN6_3X3_STM.step  STP55NF06.step  WL-SMCW_0603.step  c-ms560702ba03-50-a-3d.stp
hardware/symbols/: 10118193-0001LF.kicad_sym  ABM8AIG-12.000MHZ-12-2Z-T3.kicad_sym  ADXL375BCCZ.kicad_sym  IIM-42653.kicad_sym  LD39200PU33R.kicad_sym  LSM6DSV16XTR.kicad_sym  MCT8316Z0RRGFR.kicad_sym  MMC5983MA.kicad_sym  MS560702BA03-50.kicad_sym  PMEG3050EP_115.kicad_sym  STP55NF06.kicad_sym  TPS51386RJNR.kicad_sym  W25Q128JVSIQ.kicad_sym  (+3 more)
include/: FreeRTOSConfig.h  actuationPlan.hpp  ads.hpp  adxl375.hpp  altimeter.hpp  altimeterNEW.hpp  altimeterOLD.h  altitude-pa.h  bno055.hpp  encoder.hpp  fixed_point.h  heartbeat.hpp  high_accel.hpp  high_imu.hpp  icm20948.hpp  iim42653.hpp  imu.hpp  kalman_filter.h  kalman_filter.hpp  kalmanfilter.hpp  log_format.hpp  logger.hpp  low_imu.hpp  lpf.hpp  magnetometer.hpp  mct8316z.hpp  mid_imu.hpp  mmc5983ma.hpp  motor.hpp  ms5607.hpp  ohio_test_data.h  orientation_estimator.h  orientation_handler.hpp  pid.hpp  pwm.hpp  rocketUtils.hpp  rp2040_micro.h  sensorAltimeter.hpp  sensorI2C.hpp  sensorIMU.hpp  (+5 more)
src/: CMakeLists.txt  SimpleKalmanFilter.cpp  active-drag-system.cpp  active_drag_system.cpp  actuationPlan.cpp  actuationPlan.hpp  actuator.hpp  ads.cpp  ads.hpp  adxl375.cpp  altimeter.cpp  altimeterNEW.cpp  bno055.cpp  encoder.cpp  heartbeat.cpp  high_accel.cpp  high_imu.cpp  icm20948.cpp  iim42653.cpp  imu.cpp  imu_calib.cpp  kalman_filter.cpp  kalmanfilter.cpp  kalmanfilter.hpp  log_format.cpp  logger.cpp  low_imu.cpp  lpf.cpp  magnetometer.cpp  main.cpp  mct8316z.cpp  measure_pwm.pio  mid_imu.cpp  mmc5983ma.cpp  motor.cpp  motor.hpp  ms5607.cpp  orientation_estimator.cpp  peripheral_validation_test.cpp  pid.cpp  (+21 more)
src/AltEst/: altitude.h
src/pru/: logger.cpp  logger.h  pru_pwm.c  pwm_test.c  resource_table_empty.h  sensor.cpp  sensor.h  servos.cpp  servos.h
src/pru1/: AsyncSerial.h  Barometer.cpp  IMU.cpp  SensorLogger.cpp  SensorStructs.h  Sensors.cpp  barometer.cpp  imu.cpp  logger.cpp  sensor.cpp  sensors.cpp
src/pru1/reference_libs/: Adafruit_BNO055.cpp  Adafruit_BNO055.h  Adafruit_MPL3115A2.cpp  Adafruit_MPL3115A2.h
src/pru2/: ServoLogger.cpp  ServoStructs.h  Servos.cpp  servos.cpp
src/unused/: logger.cpp  motor.cpp  rocketUtils.cpp  sensorAltimeter.cpp  sensorIMU.cpp  surfaceFitModel.cpp
test/: CMakeLists.txt  actuationPlanTest.cpp  adsTest.cpp  alt_test.cpp  kalmanFilterTest.cpp  loggerRun  loggerTest.cpp  motorTest.cpp  output.txt  peripheral_validation_test.cpp  quaternion_test.cpp  sensorAltimeterTest.cpp  sensorIMUTest.cpp  sensor_test.cpp  surfaceFitModelTest.cpp
tests/: actuationPlanTest.cpp  adsTest.cpp  kalmanFilterTest.cpp  loggerTest.cpp  motorTest.cpp  sensorAltimeterTest.cpp  sensorIMUTest.cpp  sensorTest.cpp  surfaceFitModelTest.cpp
tools/: CMakeLists.txt  alt_test.cpp  board_test.cpp  clock_gen_test.cpp  imu_calib.cpp  measure_pwm.pio  measurement_test.cpp  motor_driver.cpp  pio_experiments.cpp  pio_experiments.pio  pwm_measure.cpp  read_flash.c  read_flash.cpp  servo_controller.cpp  servo_test.cpp
(+42 files in other folders)
